# eos-clion-example

./: CMakeLists.txt  README.md  Toolchain.cmake  currency.cpp
currency/: currency.wast
include/: currency.hpp
src/: currency.cpp  hello.cpp
